--- a/style.css
+++ b/style.css
@@ -3,3 +3,45 @@
  @author Miquéias Rodrigues
 */
 
+/* CSS RESET */ 
+*{
+    margin: 0;
+    padding: 0;
+    border: 0;
+
+}
+
+/* import fonts */
+
+@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Quicksand:wght@300..700&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Quicksand:wght@300..700&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Quicksand:wght@300..700&display=swap');
+
+/* Smartphone portrait >>>>>>>>>>>>>>>>>>>>>> */
+
+/* Smartphone landscape >>>>>>>>>>>>>>>>>>>>> */
+@media (min-width: 576px) {
+    
+}
+
+/* Tablet portrait >>>>>>>>>>>>>>>>>>>>>>>>>> */
+@media (min-width: 768px) {
+    
+}
+
+/* Tablet landscape >>>>>>>>>>>>>>>>>>>>>>>>> */
+@media (min-width: 992px) {
+    
+}
+
+/* PCs ou notebooks HD + >>>>>>>>>>>>>>>>>>>> */
+@media (min-width: 1200px) {
+    
+}
+
+/* PCs, notebooks ou Tv Full HD + >>>>>>>>>>>> */
+@media (min-width: 1400px) {
+    
+}
