--- a/style.css
+++ b/style.css
@@ -20,6 +20,10 @@ html {
 
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Noto+Serif:ital,wght@0,100..900;1,100..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Quicksand:wght@300..700&display=swap');
 
+body {
+    font-family: "Dancing Script", sans-serif;
+}
+
 /* Smartphone portrait >>>>>>>>>>>>>>>>>>>>>> */
 
 /* Smartphone landscape >>>>>>>>>>>>>>>>>>>>> */
