--- a/style.css
+++ b/style.css
@@ -11,8 +11,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,100..900;1,100..900&family=Quicksand:wght@300..700&display=swap');
 
 
-/* CSS RESET */ 
-*{
+/* CSS RESET */
+* {
     margin: 0;
     padding: 0;
     border: 0;
@@ -32,7 +32,8 @@ body {
 .Container {
     margin: 0 auto;
 
-    padding: 50px 15px 50px 15px; /*Top, right, botton, left*/
+    padding: 50px 15px 50px 15px;
+    /*Top, right, botton, left*/
 
 }
 
@@ -46,14 +47,17 @@ body {
 footer {
     background-color: darkgrey;
 }
+
 .Flex {
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
 }
+
 #social {
     background-color: greenyellow;
 }
+
 #copyright {
     background-color: aqua;
 }
@@ -84,14 +88,17 @@ footer {
     .Container {
         max-width: 1140px;
     }
+
     .Flex {
         flex-direction: row-reverse;
         justify-content: space-between;
         align-items: center;
     }
+
     #social {
         background-color: greenyellow;
     }
+
     #copyright {
         background-color: aqua;
     }
@@ -103,4 +110,3 @@ footer {
         max-width: 1360px;
     }
 }
-
