--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ footer {
 
 .Flex {
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: space-between;
     align-items: center;
 }
 
