--- a/style.css
+++ b/style.css
@@ -50,8 +50,8 @@ body {
     align-items: center;
 }
 
-/* Smartphone portrait >>>>>>>>>>>>>>>>>>>>>> */
-/* Cabeçalho */
+/************* Smartphone portrait ************/
+/**************** Cabeçalho ******************/
 #logo img {
     width: 150px;
     height: 150px;
