--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 /* import fonts */
 
 
-@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
 
 @import url('https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,100..900;1,100..900&family=Quicksand:wght@300..700&display=swap');
 
@@ -32,7 +32,7 @@ html {
 }
 
 body {
-    font-family: "Quicksand", sans-serif;
+    font-family: "Inter", sans-serif;
 }
 
 .Container {
@@ -56,6 +56,7 @@ body {
     width: 150px;
     height: 150px;
 }
+
 /* FOOTER */
 footer {
     background-color: var(--turquesaPalida);
@@ -102,9 +103,6 @@ footer {
         max-width: 1140px;
     }
 
-    #social {}
-
-    #copyright {}
 }
 
 /* PCs, notebooks ou Tv Full HD + >>>>>>>>>>>> */
