--- a/style.css
+++ b/style.css
@@ -80,6 +80,9 @@ footer {
         justify-content: space-between;
         align-items: center;
     }
+    #social {
+        margin-bottom: 0px;
+    }
 }
 
 
