--- a/style.css
+++ b/style.css
@@ -39,6 +39,9 @@ html {
 
 body {
     font-family: "Dosis", sans-serif;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
 }
 
 .Container {
