--- a/style.css
+++ b/style.css
@@ -39,11 +39,13 @@ html {
 
 body {
     font-family: "Dosis", sans-serif;
+    
+}
+section {
     margin: 0 auto;
     display: flex;
     justify-content: center;
 }
-
 .Container {
     margin: 0 auto;
     padding: 50px 15px 50px 15px;
