--- a/style.css
+++ b/style.css
@@ -87,17 +87,30 @@ section {
     justify-content: space-between;
 }
 
+.Botao {
+    text-decoration: none;
+    color: #000000;
+    font-size: 1.2em;
+    font-weight: 700;
+    border-radius: 25px;
+}
+
+.Botao {
+    background-color: var(--fundo);
+    padding: 10px 40px;
+    margin-right: 5px;
+}
+
 .Banner2 {
     height: 200px;
-    background-color: #fff;
+    background: url(img/banner1.PNG);
     background-size: cover;
     background-position: center;
-    color: #000000;
+    color: #fff;
     display: flex;
     flex-direction: column;
     justify-content: center;
     text-align: center;
-    font-family: 'Noto Serif' , sans-serif;
 }
 
 
@@ -173,27 +186,30 @@ nav ul li a {
 
 /* Banner */
 #banner {
-    height: 60vh;
+    height: 46vh;
+    background: url(img/banner1.PNG);
     background-size: cover;
-    background-position: center;
-    color: #fff;
+    background-position: center left -91.5px;
+    color: #000000;
     display: flex;
     flex-direction: column;
     justify-content: center;
     text-align: center;
-  }
-  
-  #banner h1 {
-    font-family: "Orbitron", sans-serif;
+}
+
+#banner h1 {
+    font-family: "Dosis", sans-serif;
     font-weight: 500;
     font-size: 2em;
-  }
-  
-  #banner h2 {
+    margin-top: 52px;
+}
+
+#banner h2 {
+    font-family: "Dosis", sans-serif;
     font-size: 1.15em;
-    font-weight: 700;
-    margin: 15px 0px 50px 0px;
-  }
+    font-weight: 500;
+    margin: 5px 0px 45px 0px;
+}
 
 /* FOOTER CARD */
 footer {
@@ -286,6 +302,23 @@ footer {
         max-width: 540px;
     }
 
+    /* Banner */
+    
+    #banner {
+        height: 60vh;
+        background-position: center left -10px;
+    }
+
+    #banner h1 {
+        font-size: 2em;
+        margin-top: 50px;
+    }
+
+    #banner h2 {
+        font-family: "Dosis", sans-serif;
+        font-size: 1.2em;
+    }
+
     header {
         max-width: 540px;
         margin: 0 auto;
@@ -343,6 +376,26 @@ footer {
         max-width: 720px;
     }
 
+    /* Banner */
+    
+    #banner {
+        height: 50vh;
+        background-position: center ;
+    }
+
+    #banner h1 {
+        font-size: 2.5em;
+        margin-top: 60px;
+    }
+
+    #banner h2 {
+        font-size: 1.5em;
+    }
+
+    .Botao{
+        font-size: 1.5em;
+    }
+
     /* Cabeçalho */
     header {
         max-width: 720px;
@@ -376,6 +429,26 @@ footer {
     .Container,
     .ContainerEx {
         max-width: 960px;
+    }
+
+    /* Banner */
+    
+    #banner {
+        height: 50vh;
+        background-position: center ;
+    }
+
+    #banner h1 {
+        font-size: 2.5em;
+        margin-top: 80px;
+    }
+
+    #banner h2 {
+        font-size: 1.5em;
+    }
+
+    .Botao{
+        font-size: 1.5em;
     }
 
     /***** Página sobre *****/
@@ -472,6 +545,22 @@ nav ul {
 
     nav ul li a:hover {
         color: var(--DarkCyan);
+    }
+
+    /* Banner */
+    #banner {
+        height: 55vh;
+        background-position: center;
+    }
+
+    #banner h1 {
+        font-size: 2.75em;
+        margin-top:0px;
+    }
+
+    #banner h2 {
+        font-size: 1.6em;
+        font-weight: 600;
     }
 
     /* PARTE SOBRE*/
