--- a/style.css
+++ b/style.css
@@ -105,20 +105,6 @@ section {
     margin-right: 5px;
 }
 
-.Banner2 {
-    height: 200px;
-    background: url(img/banner.png);
-    background-size: cover;
-    background-position: center;
-    color: #fff;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    text-align: center;
-}
-
-
-
 /* Topo */
 
 #topo {
@@ -193,7 +179,7 @@ nav ul li a {
     height: 46vh;
     background: url(img/banner.png);
     background-size: cover;
-    background-position: center left -91.5px;
+    background-position: center;
     color: #fff;
     display: flex;
     flex-direction: column;
@@ -203,7 +189,7 @@ nav ul li a {
 
 #banner h1 {
     font-family: "Dosis", sans-serif;
-    font-weight: 500;
+    font-weight: 600;
     font-size: 2em;
     margin-top: 52px;
 }
@@ -211,7 +197,88 @@ nav ul li a {
 #banner h2 {
     font-family: "Dosis", sans-serif;
     font-size: 1.15em;
-    font-weight: 500;
+    font-weight: 550;
+    margin: 5px 0px 45px 0px;
+}
+
+/* Banner Sobre */
+#banner1 {
+    height: 38vh;
+    background: url(img/banner.png);
+    background-size: cover;
+    background-position: center;
+    color: #fff;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+}
+
+#banner1 h1 {
+    font-family: "Dosis", sans-serif;
+    font-weight: 600;
+    font-size: 2em;
+    margin-top: 45px;
+}
+
+#banner1 h2 {
+    font-family: "Dosis", sans-serif;
+    font-size: 1.15em;
+    font-weight: 550;
+    margin: 5px 0px 45px 0px;
+}
+
+/* Banner Contato */
+#banner2 {
+    height: 38vh;
+    background: url(img/banner.png);
+    background-size: cover;
+    background-position: center;
+    color: #fff;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+}
+
+#banner2 h1 {
+    font-family: "Dosis", sans-serif;
+    font-weight: 600;
+    font-size: 2em;
+    margin-top: 45px;
+}
+
+#banner2 h2 {
+    font-family: "Dosis", sans-serif;
+    font-size: 1.15em;
+    font-weight: 550;
+    margin: 5px 0px 45px 0px;
+}
+
+/* Banner Menu Gourmet */
+#banner3 {
+    height: 38vh;
+    background: url(img/banner.png);
+    background-size: cover;
+    background-position: center;
+    color: #fff;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+}
+
+#banner3 h1 {
+    font-family: "Dosis", sans-serif;
+    font-weight: 600;
+    font-size: 2em;
+    margin-top: 45px;
+}
+
+#banner3 h2 {
+    font-family: "Dosis", sans-serif;
+    font-size: 1.15em;
+    font-weight: 550;
     margin: 5px 0px 45px 0px;
 }
 
@@ -262,12 +329,31 @@ footer {
     font-weight: bold;
 }
 
-/* FOOTER SOBRE */
+/* Links Menu Gourmet */
 
-.Banner2 h1 {
-    font-weight: 700;
-    font-size: 2.5em;
+#link {
+    display: flex;
 }
+
+#link li {
+    list-style: none;
+    background-color: var(--Vermelho-);
+    width: 130px;
+    text-align: center;
+    padding: 12px 12px;
+    margin: 10px 20px 0px 20px;
+    border-radius: 35px;
+    font-size: 1em;
+    font-weight: 500;
+    font-weight: bold; 
+}
+
+#link li a{
+    text-decoration: none;
+    color: var(--textcolor);
+}
+
+/* FOOTER SOBRE */
 
 #imgSobre img {
     width: 256px;
